------------------------------------------------------------------------------
sux0r 2.2.0
------------------------------------------------------------------------------

New shiekasai theme/partition

Upgraded to Smarty 3, a lot of work :)

Replaced Prototype/Scriptaculous with jQuery-UI and some addons, even more work

Added __autoload() function, removed manually declared includes/requires

Added language _override feature for cases where you want the same unilingual
string everywhere

Config setting allowing admin to turn off bayes filtering for blog, feeds,
and/or bookmarks

IIS WebPI efforts

Recursively scan zip files when uploading photos

Remove <!-- comments --> when sanitizing HTML for all languages

Fix: User was unable to login if language was german or chinese

Fix: Language and template inheritance related bugs. Example, language files
were ignored when using a partition other than default

Fix: Set $controller to 'globals' when banned or 404

Fix: A redirect issue in 404 and banned templates

General code cleanup, other stuff I probably forgot

Updated symbionts: htmLawed 1.1.9.4, Smarty 3.0.7, SmartyValidate 3.0.2+
jQuery-UI 1.8.10, Jeditable 1.7.1, Jcrop 0.9.8, TinyMCE 3.3.9.3

------------------------------------------------------------------------------
sux0r 2.1.0
------------------------------------------------------------------------------

Refactoring:

Since bayesRenderer is reused, it was moved to the extensions/ directory.
Child classes now inherit instead of instatiate.  It was also renamed to
suxBayesRenderer. In addition, bayesUser was renamed to  suxUserNaiveBayesian
to in an attempt to make things clearer. Same for openid class.

Moved the Banned and 404 templates out of the root directory, added them to
the globals module

Renamed the config.php and .htaccess files, turned them into sample files
instead

Pre-pended 'ajax.' to all files that are called correspondingly

Added a DEBUG mode to the advanced configuration file
